argocd/applications/argocd/base/kargo-dex-cors-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: kargo-dex-cors
  namespace: argocd
spec:
  headers:
    accessControlAllowHeaders:
      - Content-Type
    accessControlAllowMethods:
      - GET
      - POST
      - OPTIONS
    accessControlAllowOriginList:
      - https://kargo.ide-newton.ts.net
    accessControlMaxAge: 3600
    addVaryHeader: true
