argocd/applications/argocd/base/ingressroute-private.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server-private
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.k8s.proompteng.ai`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argocd.k8s.proompteng.ai`) && PathPrefix(`/api/dex`)
      priority: 100
      services:
        - name: argocd-dex-server
          port: 5556
    - kind: Rule
      match: Host(`argocd.k8s.proompteng.ai`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    secretName: wildcard-k8s-proompteng-ai-tls
